fixed contrast of tittle

--- a/src/components/react/pageNavigator/pageNavigator.css
+++ b/src/components/react/pageNavigator/pageNavigator.css
@@ -12,11 +12,12 @@
     width: 100%;
     padding: 7px 10px;
     border: none;
-    font-size: 12px;
     border-radius: 30px;
     border: solid 1px var(--action);
     background-color: var(--action);
-    color: var(--white);
+    color: var(--secundary);
+    font-weight: 600;
+    font-size: 18px;
     cursor: pointer;
 }
 .box_navigator_handler button:hover{
