--- a/src/components/react/profileFilter/profileFilter.css
+++ b/src/components/react/profileFilter/profileFilter.css
@@ -12,16 +12,17 @@
     display: grid;
     place-items: center;
     border-radius: 25px;
-    padding: 30px 5px 5px 5px;
+    padding: 32px 5px 5px 5px;
     overflow: hidden;
     transition: all ease-in-out 300ms;
     background-color: var(--action);
 }
 .title_filter{
-    font-size: 15px;
-    color: var(--primary);
+    font-size: 18px;
+    color: var(--secundary);
     margin-top: -25px;
     text-align: center;
+    font-weight: 600;
 }
 .boxes_fil{
     display: flex;
@@ -107,7 +108,6 @@
 }
 .visible_filter{
     display: grid;
-    margin-top: 5px;
     margin-left: 5px;
     transition: all ease-in-out 300ms;
 }
